--- a/README.rdoc
+++ b/README.rdoc
@@ -4,15 +4,16 @@ Redmine is a flexible project management web application written using Ruby on R
 
 More details can be found in the doc directory or on the official website http://www.redmine.org
 
+Now forked by Redmine 2.5.1-stable
 
 # Setup for heroku
 
     git clone git://github.com/kinushu/redmine.git
     cd redmine
-    git checkout 2.1-heroku
+    git checkout heroku_develop
 
     heroku create your_redmine_app_name
-    git push heroku 2.1-heroku:master
+    git push heroku heroku_develop:master
 
     heroku run rake db:migrate
     heroku run rake redmine:load_default_data
